@@ -44,6 +44,8 @@ FOREACH(exe j2k_to_image image_to_j2k)
   IF(UNIX)
     TARGET_LINK_LIBRARIES(${exe} -lm)
   ENDIF(UNIX)
+  # Install exe
+  INSTALL_TARGETS(/bin/ ${exe})
 ENDFOREACH(exe)
 
 
